add libgit2 dependency

--- a/meson.build
+++ b/meson.build
@@ -2,15 +2,21 @@ project(
   'neutron', 
   'cpp',
   version : '1.0.0',
-  license: 'GPLv3',
+  license : 'GPLv3',
   default_options : [
     'buildtype=release',
     'optimization=3'
   ]
 )
 
+# Dependencies
+libgit2 = dependency('libgit2')
+
+
+# Executable
 executable(
   'neutron', 
-  'src/*.cpp',
-  install : true
+  'src/neutron.cpp',
+  install : true,
+  dependencies : [libgit2]
 )
