--- a/meson.build
+++ b/meson.build
@@ -13,26 +13,29 @@ project(
 cmake = import('cmake')
 
 # Dependencies
-libgit2 = dependency('libgit2')
+libcppgit2 = cmake.subproject('cppgit2')
+cppgit2 = libcppgit2.dependency('cppgit2')
 
 libFTXUI_options = cmake.subproject_options()
 libFTXUI_options.add_cmake_defines({
   'CMAKE_BUILD_TYPE': 'Release'
 })
 libFTXUI = cmake.subproject('FTXUI', options : libFTXUI_options)
-message('CMaket targets:\n - ' + '\n - '.join(libFTXUI.target_list()))
 ftxui_screen = libFTXUI.dependency('screen')
 ftxui_dom = libFTXUI.dependency('dom')
 ftxui_component = libFTXUI.dependency('component')
+
+message('CMake targets:\n - ' + '\n - '.join(libcppgit2.target_list()))
 
 # Executable
 executable(
   'neutron', 
   'src/neutron.cpp',
-  'src/screen.cpp',
-  'src/document.cpp',
+  'src/components/stage.cpp',
+  'src/components/commit.cpp',
+  'src/core/repository.cpp',
   install : true,
   install_dir : '/usr/local/bin',
-  dependencies : [libgit2, ftxui_screen, ftxui_dom, ftxui_component],
+  dependencies : [cppgit2, ftxui_screen, ftxui_dom, ftxui_component],
   cpp_args : '-std=c++17'
 )
